Fix octicon vertical-align in button generator

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -58,6 +58,6 @@ textarea[readonly] {
 }
 .octicon {
   display: inline-block;
-  vertical-align: text-top;
+  vertical-align: text-top !important;
   fill: currentColor;
 }
